# cheetah

./: Cargo.toml  final-cheetah.config.json
src/: config.rs  lib.rs
src/error/: errors.rs
src/generators/: license.rs
src/read/: mod.rs  read.rs  tokenizer.rs  tokens.rs
src/test/: config.rs  mod.rs
src/test/files/: javascript-original.js  typescript-original.ts
src/test/license/: test.js  test.rs  test.ts
src/test/tokenizer/: test.rs
src/utils/: macros.rs  mod.rs  test_utils.rs
